# py-acr122u

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dictionary.py  main.py  nfc.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: precommit.yml  publish-to-pypi.yml  pytest.yml
Example/: write_and_read.py
example/: write_and_read.py
src/: main.py  nfc.py  option.py  utils.py
src/py122u/: error.py  nfc.py  option.py  utils.py
src/py_acr122u/: error.py  main.py  nfc.py  option.py
tests/: in_auto_poll_test.py  set_picc_bit_test.py
