[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py122u"
version = "2.3.5"
description = "This is a python library for the ACR122U NFC reader"
readme = "README.md"
authors = [{ name = "Brice PARENT", email = "briceparent.it@gmail.com"}, { name = "Robert van Dijk", email = "contact@robertvandijk.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["nfc", "acr", "acr122u"]
dependencies = [
    "pyscard>=2.0.7",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/Flowtter/py-acr122u"

[tool.bumpver]
current_version = "2.3.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/py122u/__init__.py" = ["{version}"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
